<resources>
    <string name="app_name">NotesApp</string>
    <string name="haven_t_created_account">Haven\'t created account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">log in</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_Up">Sign Up</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="create_a_note">Create a note</string>
    <string name="loading">Loading...</string>
    <string name="sign_out">Sign Out</string>
    <string name="sort_by">Sort by :</string>
    <string name="view_type">View Type</string>
    <string-array name="filter_options">
        <item>Last Edited</item>
        <item>Date Created</item>
        <item>Description</item>
        <item>Title</item>
    </string-array>
</resources>